[workspace]
members = [
	"bin/node-template/node",
	"bin/node-template/nobles/template",
	"bin/node-template/runtime",
	"bin/node/bench",
	"bin/node/browser-testing",
	"bin/node/cli",
	"bin/node/executor",
	"bin/node/primitives",
	"bin/node/rpc",
	"bin/node/rpc-client",
	"bin/node/runtime",
	"bin/node/testing",
	"bin/utils/chain-spec-builder",
	"bin/utils/tetkey",
	"client/api",
	"client/authority-discovery",
	"client/basic-authorship",
	"client/block-builder",
	"client/chain-spec",
	"client/chain-spec/derive",
	"client/cli",
	"client/consensus/aura",
	"client/consensus/babe",
	"client/consensus/babe/rpc",
	"client/consensus/common",
	"client/consensus/epochs",
	"client/consensus/manual-seal",
	"client/consensus/pow",
	"client/consensus/slots",
	"client/consensus/uncles",
	"client/db",
	"client/executor",
	"client/executor/common",
	"client/executor/runtime-test",
	"client/executor/twasmi",
	"client/executor/wasmtime",
	"client/finality-grandpa",
	"client/finality-grandpa-warp-sync",
	"client/informant",
	"client/keystore",
	"client/light",
	"client/network",
	"client/network-gossip",
	"client/network/test",
	"client/offchain",
	"client/peerset",
	"client/proposer-metrics",
	"client/rpc",
	"client/rpc-api",
	"client/rpc-servers",
	"client/service",
	"client/service/test",
	"client/state-db",
	"client/sync-state-rpc",
	"client/telemetry",
	"client/tracing",
	"client/tracing/proc-macro",
	"client/transaction-pool",
	"client/transaction-pool/graph",
	"fabric/assets",
	"fabric/atomic-swap",
	"fabric/aura",
	"fabric/authority-discovery",
	"fabric/authorship",
	"fabric/babe",
	"fabric/balances",
	"fabric/benchmarking",
	"fabric/bounties",
	"fabric/collective",
	"fabric/contracts",
	"fabric/contracts/rpc",
	"fabric/contracts/rpc/runtime-api",
	"fabric/democracy",
	"fabric/elections",
	"fabric/example",
	"fabric/example-offchain-worker",
	"fabric/example-parallel",
	"fabric/executive",
	"fabric/grandpa",
	"fabric/identity",
	"fabric/im-online",
	"fabric/indices",
	"fabric/lottery",
	"fabric/membership",
	"fabric/merkle-mountain-range",
	"fabric/merkle-mountain-range/primitives",
	"fabric/metadata",
	"fabric/multisig",
	"fabric/nicks",
	"fabric/node-authorization",
	"fabric/offences",
	"fabric/proxy",
	"fabric/randomness-collective-flip",
	"fabric/recovery",
	"fabric/scheduler",
	"fabric/scored-pool",
	"fabric/session",
	"fabric/session/benchmarking",
	"fabric/society",
	"fabric/staking",
	"fabric/staking/fuzzer",
	"fabric/staking/reward-curve",
	"fabric/sudo",
	"fabric/support",
	"fabric/support/procedural",
	"fabric/support/procedural/tools",
	"fabric/support/procedural/tools/derive",
	"fabric/support/test",
	"fabric/system",
	"fabric/system/benchmarking",
	"fabric/system/rpc/runtime-api",
	"fabric/timestamp",
	"fabric/transaction-payment",
	"fabric/transaction-payment/rpc",
	"fabric/transaction-payment/rpc/runtime-api",
	"fabric/treasury",
	"fabric/tips",
	"fabric/utility",
	"fabric/vesting",
	"primitives/allocator",
	"primitives/api",
	"primitives/api/proc-macro",
	"primitives/api/test",
	"primitives/application-crypto",
	"primitives/application-crypto/test",
	"primitives/arithmetic",
	"primitives/arithmetic/fuzzer",
	"primitives/authority-discovery",
	"primitives/authorship",
	"primitives/block-builder",
	"primitives/blockchain",
	"primitives/chain-spec",
	"primitives/consensus/aura",
	"primitives/consensus/babe",
	"primitives/consensus/common",
	"primitives/consensus/pow",
	"primitives/consensus/vrf",
	"primitives/core",
	"primitives/database",
	"primitives/debug-derive",
	"primitives/externalities",
	"primitives/election-providers",
	"primitives/finality-grandpa",
	"primitives/inherents",
	"primitives/io",
	"primitives/keyring",
	"primitives/keystore",
	"primitives/npos-elections",
	"primitives/npos-elections/compact",
	"primitives/npos-elections/fuzzer",
	"primitives/offchain",
	"primitives/panic-handler",
	"primitives/rpc",
	"primitives/runtime",
	"primitives/runtime-interface",
	"primitives/runtime-interface/proc-macro",
	"primitives/runtime-interface/test",
	"primitives/runtime-interface/test-wasm",
	"primitives/runtime-interface/test-wasm-deprecated",
	"primitives/sandbox",
	"primitives/serializer",
	"primitives/session",
	"primitives/staking",
	"primitives/state-machine",
	"primitives/std",
	"primitives/storage",
	"primitives/tasks",
	"primitives/test-primitives",
	"primitives/timestamp",
	"primitives/tracing",
	"primitives/transaction-pool",
	"primitives/trie",
	"primitives/utils",
	"primitives/version",
	"primitives/wasm-interface",
	"test-utils/client",
	"test-utils/derive",
	"test-utils/runtime",
	"test-utils/runtime/client",
	"test-utils/runtime/transaction-pool",
	"test-utils/test-crate",
	"utils/browser",
	"utils/build-script-utils",
	"utils/forktree",
	"utils/fabric/benchmarking-cli",
	"utils/fabric/fabric-utilities-cli",
	"utils/fabric/rpc/support",
	"utils/fabric/rpc/system",
	"utils/prometheus",
	"utils/wasm-builder",
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Tetcore. In other words, if you add
# a dependency on Tetcore, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Tetcore workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
aes-soft = { opt-level = 3 }
aesni = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
# blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crossbeam-queue = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
h2 = { opt-level = 3 }
tetsy-hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
tetsy-primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint-crate = { opt-level = 3 }
twasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
remux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Tetcore runtime requires unwinding.
panic = "unwind"
