[package]
name = "tetcore-test-utils"
version = "2.1.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore/"
description = "Tetcore test utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
tetcore-test-utils-derive = { version = "2.1.2", path = "./derive" }
tokio = { version = "0.2.13", features = ["macros"] }

[dev-dependencies]
tc-service = { version = "2.1.2", path = "../client/service" }
trybuild = { version = "1.0.38", features = [ "diff" ] }
