[package]
name = "sc-client-api"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Tetcore client interfaces."
documentation = "https://docs.rs/sc-client-api"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "tetsy-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
tc-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
derive_more = "0.99.2"
sc-executor = { version = "0.8.0", path = "../executor" }
tc-externalities = { version = "0.8.0", path = "../../primitives/externalities" }
fnv = "1.0.6"
futures = "0.3.1"
hash-db = { version = "0.15.2", default-features = false }
tc-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tc-inherents = { version = "2.0.0", default-features = false, path = "../../primitives/inherents" }
kvdb = "0.9.0"
log = "0.4.8"
parking_lot = "0.11.1"
lazy_static =  "1.4.0"
tc-database = { version = "2.0.0", path = "../../primitives/database" }
tc-core = { version = "2.0.0", default-features = false, path = "../../primitives/core" }
tc-keystore = { version = "0.8.0", default-features = false, path = "../../primitives/keystore" }
tc-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
tc-version = { version = "2.0.0", default-features = false, path = "../../primitives/version" }
tc-api = { version = "2.0.0", path = "../../primitives/api" }
tc-utils = { version = "2.0.0", path = "../../primitives/utils" }
tc-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
tc-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
tc-trie = { version = "2.0.0", path = "../../primitives/trie" }
tc-storage = { version = "2.0.0", path = "../../primitives/storage" }
tc-transaction-pool = { version = "2.0.0", path = "../../primitives/transaction-pool" }
prometheus-endpoint = { package = "tetcore-prometheus-endpoint", version = "0.8.0", path = "../../utils/prometheus" }

[dev-dependencies]
kvdb-memorydb = "0.9.0"
tc-test-primitives = { version = "2.0.0", path = "../../primitives/test-primitives" }
tetcore-test-runtime = { version = "2.0.0", path = "../../test-utils/runtime"  }
thiserror = "1.0.21"
