[package]
name = "sc-authority-discovery"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Tetcore authority discovery."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = "0.7"

[dependencies]
async-trait = "0.1"
codec = { package = "tetsy-scale-codec", default-features = false, version = "2.0.0" }
derive_more = "0.99.2"
either = "1.5.3"
futures = "0.3.9"
futures-timer = "3.0.1"
libp2p = { version = "0.34.0", default-features = false, features = ["kad"] }
log = "0.4.8"
prometheus-endpoint = { package = "tetcore-prometheus-endpoint", path = "../../utils/prometheus", version = "0.8.0"}
prost = "0.7"
rand = "0.7.2"
sc-client-api = { version = "2.0.0", path = "../api" }
sc-network = { version = "0.8.0", path = "../network" }
serde_json = "1.0.41"
tc-authority-discovery = { version = "2.0.0", path = "../../primitives/authority-discovery" }
tc-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tc-core = { version = "2.0.0", path = "../../primitives/core" }
tc-keystore = { version = "0.8.0", path = "../../primitives/keystore" }
tc-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tc-api = { version = "2.0.0", path = "../../primitives/api" }

[dev-dependencies]
quickcheck = "0.9.0"
tc-tracing = { version = "2.0.0", path = "../../primitives/tracing" }
sc-peerset = { version = "2.0.0", path = "../peerset" }
tetcore-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client"}
