[package]
name = "tc-authority-discovery"
version = "2.1.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/tc-authority-discovery"
description = "Tetcore authority discovery."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = "0.7"

[dependencies]
async-trait = "0.1"
codec = { package = "tetsy-scale-codec", default-features = false, version = "2.0.1" }
derive_more = "0.99.2"
either = "1.5.3"
futures = "0.3.9"
futures-timer = "3.0.1"
tetsy-libp2p = { version = "0.34.2", default-features = false, features = ["kad"] }
log = "0.4.8"
prometheus-endpoint = { version = "2.1.2", package = "prometheus-endpoint", path = "../../utils/prometheus" }
prost = "0.7"
rand = "0.7.2"
tc-client-api = { version = "2.1.2", path = "../api" }
tc-network = { version = "2.1.2", path = "../network" }
serde_json = "1.0.41"
tp-authority-discovery = { version = "2.1.2", path = "../../primitives/authority-discovery" }
tp-blockchain = { version = "2.1.2", path = "../../primitives/blockchain" }
tet-core = { version = "2.1.2", path = "../../primitives/core" }
tp-keystore = { version = "2.1.2", path = "../../primitives/keystore" }
tp-runtime = { version = "2.1.2", path = "../../primitives/runtime" }
tp-api = { version = "2.1.2", path = "../../primitives/api" }

[patch.crates-io]
tetsy-libp2p = { git = 'https://github.com/tetcoin/tetsy-libp2p', branch = 'tet-hotfix-aesni' }

[dev-dependencies]
quickcheck = "0.9.0"
tetcore-tracing = { version = "2.1.2", path = "../../primitives/tracing" }
tc-peerset = { version = "2.1.2", path = "../peerset" }
tetcore-test-runtime-client = { path = "../../test-utils/runtime/client"}
