[package]
name = "sc-basic-authorship"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Basic implementation of block-authoring logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "tetsy-scale-codec", version = "2.0.0" }
futures = "0.3.9"
futures-timer = "3.0.1"
log = "0.4.8"
prometheus-endpoint = { package = "tetcore-prometheus-endpoint", path = "../../utils/prometheus", version = "0.8.0"}
tc-api = { version = "2.0.0", path = "../../primitives/api" }
tc-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tc-core = { version = "2.0.0", path = "../../primitives/core" }
tc-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
sc-client-api = { version = "2.0.0", path = "../api" }
tc-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
tc-inherents = { version = "2.0.0", path = "../../primitives/inherents" }
sc-telemetry = { version = "2.0.0", path = "../telemetry" }
tc-transaction-pool = { version = "2.0.0", path = "../../primitives/transaction-pool" }
sc-block-builder = { version = "0.8.0", path = "../block-builder" }
sc-proposer-metrics = { version = "0.8.0", path = "../proposer-metrics" }

[dev-dependencies]
sc-transaction-pool = { version = "2.0.0", path = "../transaction-pool" }
tetcore-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
parking_lot = "0.11.1"
