[package]
name = "tc-basic-authorship"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/tc-basic-authorship"
description = "Basic implementation of block-authoring logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "tetsy-scale-codec", version = "2.0.1" }
futures = "0.3.9"
futures-timer = "3.0.1"
log = "0.4.8"
prometheus-endpoint = { package = "prometheus-endpoint", path = "../../utils/prometheus", version = "0.8.1"}
tp-api = { version = "2.0.2", path = "../../primitives/api" }
tp-runtime = { version = "2.0.2", path = "../../primitives/runtime" }
tet-core = { version = "2.0.2", path = "../../primitives/core" }
tp-blockchain = { version = "2.0.2", path = "../../primitives/blockchain" }
tc-client-api = { version = "2.0.0", path = "../api" }
tp-consensus = { version = "0.8.2", path = "../../primitives/consensus/common" }
tp-inherents = { version = "2.0.2", path = "../../primitives/inherents" }
tc-telemetry = { version = "2.0.0", path = "../telemetry" }
tp-transaction-pool = { version = "2.0.2", path = "../../primitives/transaction-pool" }
tc-block-builder = { version = "0.8.0", path = "../block-builder" }
tc-proposer-metrics = { version = "0.8.0", path = "../proposer-metrics" }

[dev-dependencies]
tc-transaction-pool = { version = "2.0.0", path = "../transaction-pool" }
tetcore-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
parking_lot = "0.11.1"
