[package]
name = "sc-block-builder"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Tetcore block builder"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
tc-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
tc-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tc-api = { version = "2.0.0", path = "../../primitives/api" }
tc-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
tc-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tc-core = { version = "2.0.0", path = "../../primitives/core" }
tc-block-builder = { version = "2.0.0", path = "../../primitives/block-builder" }
tc-inherents = { version = "2.0.0", path = "../../primitives/inherents" }
sc-client-api = { version = "2.0.0", path = "../api" }
codec = { package = "tetsy-scale-codec", version = "2.0.0", features = ["derive"] }

[dev-dependencies]
tetcore-test-runtime-client = { path = "../../test-utils/runtime/client" }
tc-trie = { version = "2.0.0", path = "../../primitives/trie" }
