[package]
name = "tc-block-builder"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Tetcore block builder"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
tp-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
tp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tp-api = { version = "2.0.0", path = "../../primitives/api" }
tp-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
tp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tp-core = { version = "2.0.0", path = "../../primitives/core" }
tp-block-builder = { version = "2.0.0", path = "../../primitives/block-builder" }
tp-inherents = { version = "2.0.0", path = "../../primitives/inherents" }
tc-client-api = { version = "2.0.0", path = "../api" }
codec = { package = "tetsy-scale-codec", version = "2.0.1", features = ["derive"] }

[dev-dependencies]
tetcore-test-runtime-client = { path = "../../test-utils/runtime/client" }
tp-trie = { version = "2.0.0", path = "../../primitives/trie" }
