[package]
name = "tc-block-builder"
version = "2.1.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/tc-block-builder"
description = "Tetcore block builder"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
tp-state-machine = { version = "2.1.2", path = "../../primitives/state-machine" }
tp-runtime = { version = "2.1.2", path = "../../primitives/runtime" }
tp-api = { version = "2.1.2", path = "../../primitives/api" }
tp-consensus = { version = "2.1.2", path = "../../primitives/consensus/common" }
tp-blockchain = { version = "2.1.2", path = "../../primitives/blockchain" }
tet-core = { version = "2.1.2", path = "../../primitives/core" }
tp-block-builder = { version = "2.1.2", path = "../../primitives/block-builder" }
tp-inherents = { version = "2.1.2", path = "../../primitives/inherents" }
tc-client-api = { version = "2.1.2", path = "../api" }
codec = { package = "tetsy-scale-codec", version = "2.1.2", features = ["derive"] }

[dev-dependencies]
tetcore-test-runtime-client = { path = "../../test-utils/runtime/client" }
tp-trie = { version = "2.1.2", path = "../../primitives/trie" }
