[package]
name = "sc-cli"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetcore CLI interface."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.11"
regex = "1.4.2"
tokio = { version = "0.2.21", features = [ "signal", "rt-core", "rt-threaded", "blocking" ] }
futures = "0.3.9"
fdlimit = "0.2.1"
libp2p = "0.34.0"
tetsy-scale-codec = "2.0.0"
hex = "0.4.2"
rand = "0.7.3"
tiny-bip39 = "0.8.0"
serde_json = "1.0.41"
sc-keystore = { version = "2.0.0", path = "../keystore" }
tc-panic-handler = { version = "2.0.0", path = "../../primitives/panic-handler" }
sc-client-api = { version = "2.0.0", path = "../api" }
tc-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
sc-network = { version = "0.8.0", path = "../network" }
tc-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tc-utils = { version = "2.0.0", path = "../../primitives/utils" }
tc-version = { version = "2.0.0", path = "../../primitives/version" }
tc-core = { version = "2.0.0", path = "../../primitives/core" }
tc-keystore = { version = "0.8.0", path = "../../primitives/keystore" }
sc-service = { version = "0.8.0", default-features = false, path = "../service" }
sc-telemetry = { version = "2.0.0", path = "../telemetry" }
tc-keyring = { version = "2.0.0", path = "../../primitives/keyring" }
names = "0.11.0"
structopt = "0.3.8"
sc-tracing = { version = "2.0.0", path = "../tracing" }
chrono = "0.4.10"
serde = "1.0.111"
thiserror = "1.0.21"

[target.'cfg(not(target_os = "unknown"))'.dependencies]
rpassword = "5.0.0"

[dev-dependencies]
tempfile = "3.1.0"

[features]
wasmtime = [
	"sc-service/wasmtime",
]
