[package]
name = "tc-client-db"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Client backend that uses RocksDB database as storage."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parking_lot = "0.11.1"
log = "0.4.8"
kvdb = "0.9.0"
kvdb-rocksdb = { version = "0.11.0", optional = true }
kvdb-memorydb = "0.9.0"
linked-hash-map = "0.5.2"
hash-db = "0.15.2"
tetsy-util-mem = { version = "0.9.0", default-features = false, features = ["std"] }
codec = { package = "tetsy-scale-codec", version = "2.0.0", features = ["derive"] }
blake2-rfc = "0.2.18"

tc-client-api = { version = "2.0.0", path = "../api" }
tp-arithmetic = { version = "2.0.0", path = "../../primitives/arithmetic" }
tp-core = { version = "2.0.0", path = "../../primitives/core" }
tp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tp-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
tc-executor = { version = "0.8.0", path = "../executor" }
tc-state-db = { version = "0.8.0", path = "../state-db" }
tp-trie = { version = "2.0.0", path = "../../primitives/trie" }
tp-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
tp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tp-database = { version = "2.0.0", path = "../../primitives/database" }
tetsy-db = { version = "0.1.2", optional = true, registry = "tetcoin" }
prometheus-endpoint = { package = "tetcore-prometheus-endpoint", version = "0.8.0", path = "../../utils/prometheus" }

[dev-dependencies]
tp-keyring = { version = "2.0.0", path = "../../primitives/keyring" }
tp-tracing = { version = "2.0.0", path = "../../primitives/tracing" }
tetcore-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
quickcheck = "0.9"
kvdb-rocksdb = "0.11.0"
tempfile = "3"

[features]
default = []
test-helpers = []
with-kvdb-rocksdb = ["kvdb-rocksdb"]
with-tetsy-db = ["tetsy-db"]
