[package]
name = "tc-executor"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "A crate that provides means of executing/dispatching calls into the runtime."
documentation = "https://docs.rs/tc-executor"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
derive_more = "0.99.2"
codec = { package = "tetsy-scale-codec", version = "2.0.1" }
tp-io = { version = "2.0.0", path = "../../primitives/io" }
tp-core = { version = "2.0.0", path = "../../primitives/core" }
tp-tasks = { version = "2.0.0", path = "../../primitives/tasks" }
tp-trie = { version = "2.0.0", path = "../../primitives/trie" }
serializer = { version = "2.0.0", path = "../../primitives/serializer" }
tp-version = { version = "2.0.0", path = "../../primitives/version" }
tp-panic-handler = { version = "2.0.0", path = "../../primitives/panic-handler" }
twasmi = "0.6.2"
tetsy-wasm = "0.41.0"
lazy_static = "1.4.0"
tp-api = { version = "2.0.0", path = "../../primitives/api" }
tetcore-wasm-interface = { version = "2.0.0", path = "../../primitives/wasm-interface" }
tp-runtime-interface = { version = "2.0.0", path = "../../primitives/runtime-interface" }
externalities = { version = "0.8.0", path = "../../primitives/externalities" }
tc-executor-common = { version = "0.8.0", path = "common" }
tc-executor-twasmi = { version = "0.8.0", path = "twasmi" }
tc-executor-wasmtime = { version = "0.8.0", path = "wasmtime", optional = true }
parking_lot = "0.11.1"
log = "0.4.8"
libsecp256k1 = "0.3.4"

[dev-dependencies]
assert_matches = "1.3.0"
wat = "1.0"
hex-literal = "0.3.1"
tc-runtime-test = { version = "2.0.0", path = "runtime-test" }
tetcore-test-runtime = { version = "2.0.0", path = "../../test-utils/runtime" }
tp-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
tp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tetcore-tracing = { version = "2.0.0", path = "../../primitives/tracing" }
tc-tracing = { version = "2.0.0", path = "../tracing" }
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
paste = "0.1.6"

[features]
default = [ "std" ]
# This crate does not have `no_std` support, we just require this for tests
std = []
wasm-extern-trace = []
wasmtime = [
	"tc-executor-wasmtime",
]
twasmi-errno = [
	"twasmi/errno"
]
